--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,7 @@ html,
 body {
   margin: 0;
   padding: 0;
+  width: 100%;
   height: 100%;
 }
 
@@ -119,44 +120,6 @@ a {
 .map_tan_canshu {
   color: #fff;
   text-align: center;
-}
-
-/*左上报警*/
-.baojing_list {
-  position: absolute;
-  left: 75px;
-  top: 165px;
-  width: 398px;
-  height: 297px;
-}
-.line {
-  background: url(../assets/images/Line.png) no-repeat;
-  width: 2px;
-  height: 169px;
-  float: left;
-  margin-top: 50px;
-}
-.baojing_neirong {
-  margin-left: 10px;
-}
-.yuan {
-  background: url(../assets/images/yuan.png) no-repeat;
-  width: 17px;
-  height: 17px;
-  margin-left: -7px;
-}
-.baojing_neirong li {
-  background: url(../assets/images/baojing_bg.png) no-repeat;
-  height: 65px;
-  list-style-type: none;
-  line-height: 65px;
-  color: #d6b469;
-  font-size: 17px;
-  margin-bottom: 20px;
-}
-.baojing_neirong li img {
-  margin-left: -17px;
-  margin-right: 40px;
 }
 
 /*地图弹出*/
